--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,19 @@
 /* Add CSS Styling */
+.odd-numbered {
+  background-color: lightcoral;
+  font-family: "Verdana", "DejaVu Sans", san-serif;
+}
+
+.adjust-font-size {
+  font-size: 24px;
+}
+
+#second {
+  color: blue;
+  font-size: 36px;
+}
+
+#fourth {
+  background-color: lightgreen;
+  font-weight: bold;
+}
