changed odd-numbered color

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 /* Add CSS Styling */
 .odd-numbered {
-  background-color: lightcoral;
+  background-color: pink;
   font-family: "Verdana", "DejaVu Sans", san-serif;
 }
 
