completed 01-cascade-fix to match expected outcome

--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -8,17 +8,16 @@ body {
   font-weight: 800;
 }
 
-.small-para {
+.para.small-para {
   font-size: 14px;
-  font-weight: 800;
 }
 
 .para {
   font-size: 22px;
 }
 
-.confirm {
-  background: green;
+#confirm-button {
+  background-color: green;
   color: white;
   font-weight: bold;
 } 
@@ -29,7 +28,7 @@ body {
   font-size: 20px;
 }
 
-.child {
+.text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
